* What is new in gsl-1.16:

** Improved gsl_ran_negative_binomial_pdf to avoid underflow/overflow
   for large arguments.

* What was new in gsl-1.15:

** Added Tuomo Keskitalo's new ode branch ode-initval2 with a
   gsl_odeiv2 prefix. This provides proper support for implicit
   solvers.  It is intended to be the new default for differential
   equations.  The existing gsl_odeiv routines will be retained for
   binary compatibility but their interface will be deprecated.

** Added new gsl_integrate_cquad routines for robust integration of
   difficult functions using the doubly-adaptive CQUAD algorithm
   (Pedro Gonnet).

** Added error checking to CBLAS functions (José Luis García Pallero)

** Added a new function gsl_integration_glfixed_point to return
   ordered Gauss-Legendre points and weights contained within a
   gsl_integration_glfixed_table [bug #32237].

** Added a new function gsl_interp_type_min_size to return the size of
   an interpolation type.

** Added a function gsl_pow_uint(x,n) to compute x^n for unsigned
   exponents (needed when n exceeds the range of signed integers).

** Added new routine gsl_linalg_complex_cholesky_invert to handle the
   matrix inversion for complex Cholesky decompositions (Huan Wu).

** Added the functions gsl_vector_equal(x,y) and gsl_matrix_equal(x,y)
   for testing equality of two vectors or matrices.

** Added function gsl_eigen_nonsymmv_params to control the balancing
   transformation for eigenvector calculations. Balancing is now
   turned off by default for gsl_eigen_nonsymmv.

** It is now possible to choose an alternative cblas library via
   pkg-config using the GSL_CBLAS_LIB environment variable or
   the pkg-config --define-variable option.

** The jacobi method gsl_eigen_jacobi now uses the norm of the
   off-diagonal elements for its convergence criterion, as in
   algorithm 8.4.3 of Golub and van Loan.

** The newton multiroot solvers now return an error when a singular
   jacobian is detected.
